# we-translate-ai-analysis

./: .dockerignore  .env  .gitignore  Dockerfile.frontend  README.md  next.config.ts  package-lock.json  package.json  syncfusion-license.txt  tailwind.config.ts  tsconfig.json
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE  Makefile  TERMS_OF_SERVICE.md  alembic.ini  cli.py  conftest.py  globals.py  languages.py  logging.ini  main.py  nginx.conf  pyproject.toml  pytest.ini
backend/.docker/: Dockerfile.base  Dockerfile.celery  Dockerfile.nginx  Dockerfile.prometheus
backend/.localstack/cache/: machine.json  (+1 more)
backend/docker-compose/: docker-compose.base.yml  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.testing.yml
backend/environments/: .env.example
backend/manage/: app.py  db.py
backend/migrations/: env.py  script.py.mako
backend/prometheus_data/: entrypoint.sh  prometheus.yml
backend/prompts/: params_v1.json  params_v2.json  params_v3.json  prompt_v1.txt  prompt_v2.txt  prompt_v3.txt
backend/requirements/: requirements.base.txt  requirements.development.txt  requirements.lint.txt  requirements.production.txt  requirements.testing.txt
backend/scripts/: build.sh  check_folder.sh  clean.sh  create_venv.sh  debug.sh  down.sh  format.sh  lint.sh  load_config.sh  load_env.sh  migrate.sh  permissions.sh  prod.sh  stage.sh  start-celery.sh  start_services.sh  test.sh
backend/tests/: base_test.py  conftest.py  override.py  test_runner.py
frontend/: .env  (+8 more)
(+506 files in other folders)
